--- a/deploy/package.ini
+++ b/deploy/package.ini
@@ -1,6 +1,6 @@
-Name = Qt Example Plugin
+Name = Expanded Administration
 Type = Plugin
-Author = JUL14N
+Author = PhysicsGaunt
 Version = <version>
 Platforms = win64, win32, linux_amd64, mac
-Description = "A simple Qt plugin to demonstrate a full toolchain."
+Description = "TS3 plugin for expanded administration."
